# RankGunPackage

./: .gitignore  LICENSE  PKG-INFO  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python-publish.yml  ruff.yml  tests.yml
src/rankgun/: __init__.py  __innit__.py
src/rankgun.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: testing.py
