[metadata]
name = rankgun
version = 2.1.7
author = Noah-Haf
author_email = cosmo.topside_07@icloud.com
description = https://rankgun.works
long_description = file: README.md
long_description_content_type = text/markdown
url = https://rankgun.works
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir =
	= src
install_requires =
	requests
python_requires = >=3.6

[options.packages.find]
where = src

[egg_info]
tag_build =
tag_date = 0

